# md-gtd-mcp

./: .coverage.Mac.62254.XnqPlQNx  .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-08-10-obsidian-vault-integration/: spec-lite.md  spec.md  (+1 more)
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
src/md_gtd_mcp/: __init__.py  server.py
tests/: __init__.py  test_capture_inbox_item.py  test_client_compatibility.py  test_documentation_examples.py  test_edge_cases_comprehensive.py  test_error_recovery.py  test_gtd_complete_workflow.py  test_integration.py  test_integration_resources.py  test_mcp_server_integration.py  test_migration_integration.py  test_performance.py  test_resource_handler.py  test_resource_handler_enhanced_taskextractor.py  test_resource_integration_phase_aware.py  test_resources.py  test_server.py
tests/fixtures/: __init__.py
tests/models/: test_gtd_file.py  test_gtd_frontmatter_pydantic.py  test_vault_config.py
tests/parsers/: test_link_extractor.py  test_markdown_parser.py  test_task_extractor.py  test_task_extractor_file_type_aware.py
tests/prompts/: __init__.py  test_gtd_rules.py  test_registration.py  test_rule_engine_integration.py  test_rule_engine_properties.py  test_schemas.py  test_task_2_8_verification.py  test_time_complexity_patterns.py
tests/services/: test_vault_reader.py
(+60 files in other folders)
