[project]
name = "md-gtd-mcp"
version = "0.1.0"
description = "MCP server for markdown-based Getting Things Done (GTD) system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.2",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.1.0",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=5.1.0",
]

[project.scripts]
md-gtd-server = "md_gtd_mcp.server:main"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "PIE", "T20"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
